--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -43,6 +43,15 @@ http {
       proxy_pass http://auth_up;
     }
 
+    location /load/ {
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Authorization $http_authorization;
+      proxy_set_header Cookie $http_cookie;
+      proxy_pass http://auth_up;
+    }
+    # ----------------------------------------------
+
     location = /_auth {
       internal;
       proxy_set_header Host $host;
